fixed arrow wrapper by collapsing, prev/next consistency

--- a/stylesheets/details.less
+++ b/stylesheets/details.less
@@ -69,36 +69,35 @@
   }
 
 .detail-nav {
-  top: 55%;
-  z-index: 10;
-  position: fixed;
-  height: auto;
-  width: 90%;
-  margin-left: 4%;
-  margin-right: 6%;
-
+  @arrow-margin: 3%;
+  width: 100%;
+  height: 100%;
   @media (max-width: @small) {
     display: none;
   }
 
-
-  a {display: block;}
+  a {
+    display: block;
+    top: 50%;
+    z-index: 10;
+    position: fixed;
+  }
 
   img {
     height: 60px;
-
     @media (max-width: @medium) {height: 45px;}
   }
 
   .arrow-right {
-    width: auto;
-    float: right;
+    position: fixed;
+    right: @arrow-margin;
 
     img {float: right;}
   }
+
   .arrow-left {
-    width: auto;
-    float: left;
+    position: fixed;
+    left: @arrow-margin;
 
     img {float: left;}
   }
